[package]
name = "intel-pstate"
version = "1.0.0"
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Aaron Murphy <michael@system76.com>"
]
description = "Fetch and modify Intel pstate kernel parameters"
keywords = ["linux", "intel", "pstate"]
categories = ["os::unix-apis"]
repository = "https://github.com/pop-os/intel-pstate"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
derive_setters = "0.1.5"
smart-default = "0.6.0"
thiserror = "1.0.30"
